2015-04-20  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (need_horizontal_update, need_vertical_update): Fuse
	two identical functions into one: need_screen_update().

2015-04-18  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c, src/nano.c, doc/man/nanorc.5, doc/texinfo/nano.texi:
	Make the descriptions of the multibuffer feature more accurate.
	* src/winio.c (display_string): Make sure an invalid starting byte
	of a multibyte sequence is properly terminated, so that it doesn't
	pick up lingering bytes of any previous content.  This prevents the
	displaying of ghosts -- characters that aren't really there -- when a
	file contains valid ánd invalid UTF-8 sequences.  For an example see:
	https://lists.gnu.org/archive/html/nano-devel/2015-04/msg00052.html.
	Also make two comments more accurate: an invalid multibyte sequence
	will never be categorized as a control character or anything else.

2015-04-18  Mark Oteiza  <mvoteiza@udel.edu>
	* doc/syntax/{python,ruby,sh,tex}.nanorc: Add a linter definition.
	* doc/syntax/elisp.nanorc: New file; syntax highlighting for Elisp.
	* doc/syntax/guile.nanorc: New file; syntax highlighting for Guile.

2015-04-17  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_alt_speller, do_linter, do_formatter): Distinguish
	a failure to launch the linter from receiving zero parsable lines;
	add a new function to glue together the invocation-error string.
	* src/global.c (shortcut_init): In the Help Viewer and File Browswer,
	bind the unbound Home and End keys to goto_top and goto_bottom, to
	mimic the behaviour of these keys in file viewers and web browsers.
	Also show ^Y and ^V in the WhereisFile menu instead of M-\ and M-/,
	for similarity with the WhereIs menu.
	* src/global.c (shortcut_init): Arrange the movement keys in the File
	Browser in the order of ascending stride, as in the Help Viewer.

GNU nano 2.4.1 - 2015.04.14
2015-04-13  Benno Schulenberg  <bensberg@justemail.net>