@@ -1,6 +1,8 @@
 2015-04-20  Benno Schulenberg  <bensberg@justemail.net>
 	* src/winio.c (need_horizontal_update, need_vertical_update): Fuse
 	two identical functions into one: need_screen_update().
+	* src/prompt.c (need_statusbar_horizontal_update): Rename function
+	to need_statusbar_update() as there is no vertical counterpart.
 
 2015-04-18  Benno Schulenberg  <bensberg@justemail.net>
 	* src/global.c, src/nano.c, doc/man/nanorc.5, doc/texinfo/nano.texi:
